--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/09_Blog-layout-inline-block/layout.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/09_Blog-layout-inline-block/layout.css
@@ -1,36 +1,45 @@
-html{
+html {
     max-width: 32%;
     margin: 3em;
-    
+
 }
-h1, h2, h3{
+
+h1,
+h2,
+h3 {
     margin-bottom: 0.4em;
 }
+
 ul {
     margin-top: 2em;
     margin-bottom: 2em;
     margin-left: 2em;
 }
-img{
+
+img {
     margin: 1.5em 0;
     max-width: 75%;
 }
-.site-header{
+
+.site-header {
     display: block;
     position: relative;
     margin-bottom: 2em;
 
 }
+
 aside {
     display: block;
     position: absolute;
     top: 0;
     right: 0;
     transform: translateX(100%);
-  }
-.site-footer{
+}
+
+.site-footer {
     margin: 1em 0;
 }
-footer p{
+
+footer p {
     margin: 2em 0;
 }
