--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/12_Navigation-float/typography.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/12_Navigation-float/typography.css
@@ -15,26 +15,49 @@ a {
 */
 
 blockquote {
-    
+
     border-left: 3px solid #CCC;
     color: #7a7878;
     font-family: Georgia, serif;
     font-style: italic;
 }
-.author{
+
+.author {
     font-weight: 700;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font: 1em/1.2 Georgia, serif;
 }
 
-h1 {    font-size: 2em;}
-h2 {    font-size: 1.6em;}
-h3 {    font-size: 1.4em;}
-h4 {    font-size: 1.2em;}
-h5 {    font-size: 1em;}
-h6 {    font-size: 0.8em;}
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.6em;
+}
+
+h3 {
+    font-size: 1.4em;
+}
+
+h4 {
+    font-size: 1.2em;
+}
+
+h5 {
+    font-size: 1em;
+}
+
+h6 {
+    font-size: 0.8em;
+}
 
 .site-title {
     text-transform: uppercase;
