--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/01/styles/site-banner.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/01/styles/site-banner.css
@@ -20,14 +20,14 @@
 .site-banner:after {
     position: absolute;
     inset: 0;
-    background: rgba(0,0,0,0.4);
-    box-shadow: 0 0 1.5em 0.1em rgba(0,0,0,0.4) inset;
+    background: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 1.5em 0.1em rgba(0, 0, 0, 0.4) inset;
     z-index: 40;
     transition: background 0.3s ease-in;
 }
 
 .site-banner:hover:after {
-    background: rgba(0,0,0,0.1);
+    background: rgba(0, 0, 0, 0.1);
 }
 
 .site-banner img {
@@ -39,10 +39,10 @@
 
 .site-banner p {
     position: absolute;
-    bottom: 0; 
+    bottom: 0;
     right: 0;
     color: #fff;
     padding: 1em 2em;
     z-index: 50;
-    text-shadow: 0.1em 0.1em 0.5em rgba(0,0,0,0.4);
+    text-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.4);
 }
