--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/01/styles/typography.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/01/styles/typography.css
@@ -3,48 +3,88 @@ html {
 }
 
 @media (min-width: 600px) {
-    html { font-size: 14px; }
+    html {
+        font-size: 14px;
+    }
 }
 
 @media (min-width: 900px) {
-    html { font-size: 16px; }
+    html {
+        font-size: 16px;
+    }
 }
 
 @media (min-width: 1200px) {
-    html { font-size: 18px; }
+    html {
+        font-size: 18px;
+    }
 }
 
 @media (min-width: 1400px) {
-    html { font-size: 20px; }
+    html {
+        font-size: 20px;
+    }
 }
 
-body, table, input, button {
+body,
+table,
+input,
+button {
     font: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-size: 1em;
     margin-bottom: 0.5em;
     margin-top: 1em;
     font-weight: normal;
 }
 
-h1 { font-size: 3.0em; }
-h2 { font-size: 2.4em; }
-h3 { font-size: 1.8em; }
-h4 { font-size: 1.4em; }
-h5 { font-size: 1.2em; font-weight: bold; }
-h6 { font-size: 1em; font-weight: bold; }
+h1 {
+    font-size: 3.0em;
+}
 
-p, * + ul, * + ol {
+h2 {
+    font-size: 2.4em;
+}
+
+h3 {
+    font-size: 1.8em;
+}
+
+h4 {
+    font-size: 1.4em;
+}
+
+h5 {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+h6 {
+    font-size: 1em;
+    font-weight: bold;
+}
+
+p,
+*+ul,
+*+ol {
     padding-bottom: 1.5em;
 }
 
-ul, ol, blockquote {
+ul,
+ol,
+blockquote {
     padding-left: 1.5em;
 }
 
-ul, ol {
+ul,
+ol {
     list-style-position: inside;
 }
 
