--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/05_Blog-Article/styles.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/05_Blog-Article/styles.css
@@ -1,16 +1,17 @@
-body{
+body {
     background: #02475e;
 }
-article{
 
-}
-h2{
+article {}
+
+h2 {
     font-size: 36px;
     color: #fefecc;
     margin: 12px;
     text-align: center;
 }
-p{
+
+p {
     color: #eee;
     font-family: Arial, sans-serif;
     line-height: 24px;
@@ -18,14 +19,16 @@ p{
     text-indent: 30px;
 
 }
-div{
+
+div {
     margin-bottom: 30px;
     border-top: 2px solid #fff;
     position: relative;
     top: 20px;
-    
+
 }
-span{
+
+span {
     width: 120px;
     font-size: 14px;
     text-align: center;
