--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/09_Blog-layout-inline-block/reset.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/09_Blog-layout-inline-block/reset.css
@@ -1,10 +1,14 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-*, *:before, *:after{
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
-html{
+
+html {
     box-sizing: border-box;
 }
