--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/12_Navigation-float/reset.css
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/12_Navigation-float/reset.css
@@ -2,9 +2,13 @@
     padding: 0;
     margin: 0;
 }
+
 html {
     box-sizing: border-box;
 }
-*, *:before, *:after{
- box-sizing: inherit;
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
